@@ -1,0 +1,1 @@
+{"1":"red","2":"green",".":"white"}
