@@ -1,0 +1,73 @@
+#!perl -T
+use strict;
+use warnings FATAL => 'all';
+use Test::More tests => 15;
+
+use Spreadsheet::HTML;
+
+my $generator = Spreadsheet::HTML->new( sorted_attrs => 1 );
+
+is $generator->beadwork(),
+    '<table><tr><th>Error</th></tr><tr><td>art is required</td></tr><tr><td>map is required</td></tr></table>',
+    "beadwork with no args (method)";
+
+is Spreadsheet::HTML::beadwork(),
+    '<table><tr><th>Error</th></tr><tr><td>art is required</td></tr><tr><td>map is required</td></tr></table>',
+    "beadwork with no args (function)";
+
+is $generator->beadwork( art => 't/data/art.ascii' ),
+    '<table><tr><th>Error</th></tr><tr><td>map is required</td></tr></table>',
+    "beadwork missing map arg (method)";
+
+is Spreadsheet::HTML::beadwork( art => 't/data/art.ascii' ),
+    '<table><tr><th>Error</th></tr><tr><td>map is required</td></tr></table>',
+    "beadwork missing map arg (function)";
+
+is $generator->beadwork( map => 't/data/map.json' ),
+    '<table><tr><th>Error</th></tr><tr><td>art is required</td></tr></table>',
+    "beadwork missing art arg (method)";
+
+is Spreadsheet::HTML::beadwork( map => 't/data/map.json' ),
+    '<table><tr><th>Error</th></tr><tr><td>art is required</td></tr></table>',
+    "beadwork missing art arg (function)";
+
+is $generator->beadwork( art => 't/data/art.ascii', map => 't/data/missing.json' ),
+    '<table><tr><th>Error</th></tr><tr><td>map is not valid JSON</td></tr></table>',
+    "beadwork bad map arg (method)";
+
+is Spreadsheet::HTML::beadwork( art => 't/data/art.ascii', map => 't/data/missing.json' ),
+    '<table><tr><th>Error</th></tr><tr><td>map is not valid JSON</td></tr></table>',
+    "beadwork bad map arg (function)";
+
+is $generator->beadwork( map => 't/data/map.json', art => 't/data/missing.ascii' ),
+    '<table><tr><th>Error</th></tr><tr><td>Cannot read t/data/missing.ascii</td></tr></table>',
+    "beadwork bad art arg (method)";
+
+is Spreadsheet::HTML::beadwork( map => 't/data/map.json', art => 't/data/missing.ascii' ),
+    '<table><tr><th>Error</th></tr><tr><td>Cannot read t/data/missing.ascii</td></tr></table>',
+    "beadwork bad art arg (function)";
+
+chomp( my $html = <DATA> );
+is $generator->beadwork( preset => 'mario' ),
+    $html,
+    "beadwork with preset (method)";
+
+is Spreadsheet::HTML::beadwork( preset => 'mario' ),
+    $html,
+    "beadwork with preset (function)";
+
+is $generator->beadwork( art => 't/data/art.ascii', map => 't/data/map.json' ),
+    '<table><tr><td height="8" style="background-color: red" width="16">&nbsp;</td><td height="8" style="background-color: red" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: green" width="16">&nbsp;</td><td height="8" style="background-color: green" width="16">&nbsp;</td></tr></table>',
+    "beadwork with file args";
+
+is $generator->beadwork( art => 't/data/art.ascii', map => 't/data/map.json', bgcolor => 'black' ),
+    '<table><tr><td height="8" style="background-color: red" width="16">&nbsp;</td><td height="8" style="background-color: red" width="16">&nbsp;</td><td height="8" style="background-color: black" width="16">&nbsp;</td><td height="8" style="background-color: black" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: black" width="16">&nbsp;</td><td height="8" style="background-color: black" width="16">&nbsp;</td><td height="8" style="background-color: green" width="16">&nbsp;</td><td height="8" style="background-color: green" width="16">&nbsp;</td></tr></table>',
+    "beadwork with bgcolor overriden";
+
+is $generator->beadwork( art => 't/data/art.ascii', map => 't/data/map.json', -1 => "blue", -2 => "yellow" ),
+    '<table><tr><td height="8" style="background-color: blue" width="16">&nbsp;</td><td height="8" style="background-color: blue" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: yellow" width="16">&nbsp;</td><td height="8" style="background-color: yellow" width="16">&nbsp;</td></tr></table>',
+    "beadwork with other colors overriden";
+
+
+__DATA__
+<table><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: #F5Af9D" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: #D91F26" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: #3D59A8" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: #481E1D" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr><tr><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td><td height="8" style="background-color: white" width="16">&nbsp;</td></tr></table>
